fixed favicon whitespace in links, minor aboutText adjustments

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
   background-color: var(--background);
 
   cursor: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 .main-section {
